<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LessonsLearnedExamples</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="sql_performance_tests">Sql Performance</string>
    <string name="label_100_rows">Inserting 100 Rows</string>
    <string name="label_1000_rows">Inserting 1,000 Rows</string>
    <string name="label_10000_rows">Inserting 10,000 Rows</string>
    <string name="label_100000_rows">Inserting 100,000 Rows</string>
    <string name="label_1000000_rows">Inserting 1,000,000 Rows</string>
    <string name="sql_with_cv">Content Values</string>
    <string name="sql_cv_worst">Content Values - No Transaction</string>
    <string name="sql_with_raw">Compiled Statements</string>
    <string name="sql_raw_worst">Compiled Statement - No Transaction</string>
    <string name="sql_clear">Clean Up After Yourself</string>
    <string name="time_to_complete">Time to complete:</string>
    <string name="working">Working, dude, hang on</string>
    <string name="none"></string>
    <string name="button_text">Button Text</string>
    <string name="color_filter_button">Color Filter Example</string>
    <string name="ok">Ok</string>
    <string name="build_type_button">What\'s my build type?</string>
    <string name="cursor_loader_button">Cursor Loader Example</string>
    <string name="empty_list">Nothing here, Homie!</string>
    <string name="name_label">Name:</string>
    <string name="count_label">Count:</string>
    <string name="position_label">Position:</string>

</resources>
