<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="7dp">

    <TextView
        android:id="@+id/name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/name_label" />

    <TextView
        android:id="@+id/name_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/name_label"
        android:layout_toRightOf="@id/name_label"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/count_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_below="@id/name_label"
        android:textSize="14sp"
        android:text="@string/count_label" />

    <TextView
        android:id="@+id/count_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_label"
        android:layout_toEndOf="@id/count_label"
        android:layout_toRightOf="@id/count_label"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/position_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_label"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="5dp"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/position_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginEnd="5dp"
        android:layout_below="@id/name_label"
        android:layout_toLeftOf="@id/position_value"
        android:layout_toStartOf="@id/position_value"
        android:textSize="14sp"
        android:text="@string/position_label" />

</RelativeLayout>